prevent tree from jumping

--- a/app/components/Projekte/StrukturbaumContainer/Strukturbaum/styles.css
+++ b/app/components/Projekte/StrukturbaumContainer/Strukturbaum/styles.css
@@ -15,7 +15,10 @@
 }
 
 .node {
-  height: 1.6em;
+  height: 23px;
+  max-height: 23px;
+  box-sizing: border-box;
+  margin: 0;
   display: flex;
   flex-direction: row;
   white-space: nowrap;
